@@ -43,6 +43,7 @@ x86_64-*-freebsd*)	gdb_target=fbsd64 ;;
 alpha*-*-osf*)		gdb_target=alpha-osf1 ;;
 alpha*-*-linux*)	gdb_target=alpha-linux ;;
 alpha*-*-netbsd*)	gdb_target=nbsd ;;
+alpha*-*-openbsd*)	gdb_target=nbsd ;;
 alpha*-*-*)		gdb_target=alpha ;;
 
 arm*-wince-pe)		gdb_target=wince ;;
