@@ -39,6 +39,7 @@ encountered these.
 * New native configurations
 
 NetBSD/amd64					x86_64-*-netbsd*
+OpenBSD/alpha					alpha*-*-openbsd*
 OpenBSD/sparc					sparc-*-openbsd*
 OpenBSD/sparc64					sparc64-*-openbsd*
 
